Prevent badge text from wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,7 @@ body {
   text-align: center;
   border-radius: 0.25rem;
   font-size: 0.8em;
+  white-space: nowrap;
 }
 
 @media screen and (min-width: 600px) {
